--- a/src/style/common/_buttons.scss
+++ b/src/style/common/_buttons.scss
@@ -15,6 +15,20 @@
     font-size: 14px;
     color: var(--white-color);
   }
+
+  &--secondary {
+    color: var(--white-color);
+
+    background-color: var(--dark-blue-color);
+    border-radius: 100%;
+    width: 46px;
+    height: 46px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+  }
 }
 
 .btn-icon {
