--- a/src/style/common/_form.scss
+++ b/src/style/common/_form.scss
@@ -2,19 +2,20 @@
   display: flex;
   flex-direction: column-reverse;
 
-  &>span {
+  & > span {
     font-size: 14px;
     margin-bottom: 4px;
   }
 }
 
 .form-input {
-  font-size: 16px;
-  padding: var(--input-offset, 14px);
+  font-size: 12px;
+  padding: 14px 24px;
   width: 100%;
-  color: inherit;
-  background-color: transparent;
-  border: 1px solid var(--input-border-color, currentColor);
+  color: var(--black-color);
+  background-color: #f4f6fb;
+  border: none;
+  border-radius: 300px;
   appearance: none;
 
   &:-webkit-autofill,
