--- a/src/style/pages/main/_service.scss
+++ b/src/style/pages/main/_service.scss
@@ -4,12 +4,28 @@
   display: grid;
   row-gap: 16px;
 
+  &:hover {
+    & button {
+      color: #0a0a0a;
+      background-color: var(--white-color);
+      transform: rotate(-45deg);
+    }
+  }
+
   &__img {
+    position: relative;
     overflow: hidden;
     border-radius: 5px;
+    padding-bottom: 56%;
 
     & img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -25,9 +41,28 @@
     font-weight: 400;
     font-size: 20px;
     color: var(--white-color);
+
+    max-width: 200px;
+    margin-right: 30px;
+
+
+    & a {
+      font-size: inherit;
+      color: inherit;
+
+      &::after {
+        content: "";
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+    }
   }
 
-  &__link {
+  &__btn {
     color: var(--white-color);
 
     border: 2px solid var(--white-color);
@@ -43,20 +78,6 @@
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
       transform 0.3s ease-in-out;
 
-    &:hover {
-      color: #0a0a0a;
-      background-color: var(--white-color);
-      transform: rotate(-45deg);
-    }
 
-    &::after {
-      content: "";
-      position: absolute;
-      z-index: 1;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-    }
   }
 }
