--- a/src/style/settings/_utils.scss
+++ b/src/style/settings/_utils.scss
@@ -45,6 +45,11 @@ input[type="file"].visually-hidden {
   background-color: #f4f6fb;
   border-radius: 300px;
   padding: 5px;
+
+  &--size {
+    width: 120px;
+    height: 120px;
+  }
 }
 
 .container {
@@ -54,4 +59,28 @@ input[type="file"].visually-hidden {
   width: min(var(--max-width), 100% - (var(--padding-side) * 2));
   margin: 0 auto;
   box-sizing: border-box;
+}
+
+.txt-sm {
+  font-weight: 400;
+  font-size: 12px;
+
+  &--gradient {
+    background: linear-gradient(90deg, #1e1e1e 0%, #848484 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.d-lg-none {
+  @include media-min($lg) {
+    display: none !important;
+  }
+}
+
+.d-sm-none {
+  @include media-max($lg) {
+    display: none !important;
+  }
 }
