Главная готова, начал верстку внутренних страниц

--- a/src/style/common/_index.scss
+++ b/src/style/common/_index.scss
@@ -1,8 +1,10 @@
 @import "site";
+@import "page";
 @import "buttons";
 @import "title";
 @import "form";
 @import "scroll-top";
 @import "slider";
+@import "logo";
 @import "contacts";
 @import "social";
