--- a/src/style/common/_title.scss
+++ b/src/style/common/_title.scss
@@ -18,4 +18,12 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  &--sm-blue {
+    font-size: 49px;
+    background: linear-gradient(90deg, #1b2c4d 0%, #7184aa 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
