--- a/src/style/header/_language-switcher.scss
+++ b/src/style/header/_language-switcher.scss
@@ -1,9 +1,25 @@
 .language-switcher {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: column;
-  column-gap: 14px;
-  margin-right: 50px;
+  display: inline-block;
+
+  &__title {
+    font-weight: 400;
+    font-size: 20px;
+    background: linear-gradient(90deg, #1e1e1e 0%, #848484 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+
+    margin-bottom: 12px;
+  }
+
+  &__cont {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: column;
+    column-gap: 14px;
+    margin-right: 50px;
+  }
 
   &__btn {
     @include btn-reset;
