--- a/src/style/header/_index.scss
+++ b/src/style/header/_index.scss
@@ -1,3 +1,6 @@
+@import "just-burger";
+@import "header-modal";
 @import "header";
 @import "language-switcher";
 @import "main-nav";
+@import "language-select";
