--- a/src/style/settings/_keyframes.scss
+++ b/src/style/settings/_keyframes.scss
@@ -22,3 +22,15 @@
     transform: translateX(7px);
   }
 }
+
+@keyframes fade-left {
+  0% {
+    transform: translate(-33%, 0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
