--- a/src/style/common/_scroll-top.scss
+++ b/src/style/common/_scroll-top.scss
@@ -37,8 +37,10 @@
     &__link {
       transition: opacity .25s ease-in-out;
 
-      &:hover {
-        opacity: 0.7;
+      @media (any-hover: hover) {
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
