--- a/src/style/header/_main-nav.scss
+++ b/src/style/header/_main-nav.scss
@@ -10,8 +10,12 @@
     color: inherit;
     transition: color .3s ease-in-out;
 
-    &:hover {
-      color: var(--black-color);
+
+
+    @media (any-hover: hover) {
+      &:hover {
+        color: var(--black-color);
+      }
     }
   }
 }
