--- a/src/style/header/_header-modal.scss
+++ b/src/style/header/_header-modal.scss
@@ -66,8 +66,10 @@
       opacity: .8;
 
 
-      &:hover {
-        opacity: 1;
+      @media (any-hover: hover) {
+        &:hover {
+          opacity: 1;
+        }
       }
     }
   }
