--- a/src/style/modal/_modal.scss
+++ b/src/style/modal/_modal.scss
@@ -5,7 +5,16 @@
   color: #000000;
   background-color: #FFFFFF;
   min-width: 360px;
-  max-width: 768px;
+  max-width: 618px;
+  width: 100%;
+
+  padding: 40px 25px 30px;
+
+  @include media-min($lg) {
+    padding: 80px 100px 60px;
+  }
+
+
 
   &__close {
     @include btn-reset;
@@ -23,5 +32,64 @@
 
   @include media-max(calc(var(--min-site-width) - 1px)) {
     min-width: auto;
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 49px;
+    line-height: 1;
+    text-align: center;
+    background: linear-gradient(90deg, #1b2c4d 0%, #7184aa 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    margin-bottom: 16px;
+  }
+
+  &__text {
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    color: var(--black-color);
+
+    max-width: 324px;
+    margin: 0 auto;
+    margin-bottom: 32px;
+  }
+
+  & form {
+    display: grid;
+    row-gap: 22px;
+    max-width: 330px;
+    width: 100%;
+    margin: 0 auto;
+
+    margin-bottom: 32px;
+
+    @include media-min($lg) {
+      max-width: 418px;
+    }
+  }
+
+  & .form-input {
+    width: 100%;
+    min-height: 76px;
+    position: relative;
+  }
+
+  & .btn {
+    max-width: 336px;
+    margin: 0 auto;
+  }
+
+  &__info {
+    text-align: center;
+    max-width: 386px;
+    margin: 0 auto;
+
+    & a {
+      color: #58a1f8;
+    }
   }
 }
