--- a/src/style/pages/main/_partners.scss
+++ b/src/style/pages/main/_partners.scss
@@ -13,6 +13,14 @@
   &__slider {
     position: relative;
 
+    & .swiper {
+
+
+      @include media-min($lg) {
+        margin: 0 35px;
+      }
+    }
+
     & .swiper-slide {
       position: relative;
       padding-top: 23%;
