--- a/src/style/settings/_global.scss
+++ b/src/style/settings/_global.scss
@@ -18,3 +18,13 @@ img {
   height: auto;
   object-fit: cover;
 }
+
+
+// @media screen and (-webkit-min-device-pixel-ratio: 0) {
+
+//   select:focus,
+//   textarea:focus,
+//   input:focus {
+//     font-size: 16px;
+//   }
+// }
