--- a/src/style/pages/apartment-rent/_product.scss
+++ b/src/style/pages/apartment-rent/_product.scss
@@ -1,56 +1,56 @@
 .product {
-  position: relative;
-
-  overflow: hidden;
   cursor: pointer;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
 
-  height: 0;
-  padding-bottom: 140%;
-
-  @include media-min ($lg) {
-    padding-bottom: 134%;
-  }
-
-  &:before {}
-
-  @media (any-hover: hover) {
+  @media (hover: hover) {
     &:hover {
+      & .product__middle {
+        transform: translateY(0);
+      }
+
+      & .product__info {
+        transform: translateY(0);
+      }
+
       & .swiper-slide {
-        padding-bottom: 55%;
+        padding-bottom: 100%;
       }
     }
   }
 
-  &__cont {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
+  @media (hover: none) {
+
+    & .product__middle {
+      transform: translateY(0);
+    }
+
+    & .product__info {
+      transform: translateY(0);
+    }
+
+    & .swiper-slide {
+      padding-bottom: 100%;
+    }
+
   }
 
+
+
   &__slider {
-    flex-shrink: 0;
+    width: 100%;
+    height: auto;
     margin-bottom: 24px;
 
     .swiper-slide {
       position: relative;
       height: 0;
-
+      width: 100%;
       overflow: hidden;
       border-radius: 5px;
       transition: padding-bottom .4s ease-in-out;
-
-
-
-      @media (any-hover: hover) {
-        padding-bottom: 108%;
-      }
-
-      @media (hover: none) {
-        padding-bottom: 55%;
-      }
+      padding-bottom: 130%;
 
 
       & img {
@@ -65,7 +65,14 @@
   }
 
   &__info {
-    flex-shrink: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    transform: translateY(100%);
+    transition: .2s ease-in-out;
+    background-color: var(--white-color);
   }
 
   &__row {
@@ -73,6 +80,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 4px;
+    width: 100%;
   }
 
   &__title {
@@ -89,7 +97,7 @@
     color: var(--black-color);
   }
 
-  &__address {
+  &__additional {
     display: inline-block;
 
     font-weight: 400;
@@ -101,6 +109,23 @@
 
     margin-bottom: 12px;
   }
+
+  &__middle {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    width: 100%;
+
+    transform: translateY(-100%);
+    transition: .2s ease-in-out;
+
+    background-color: var(--white-color);
+    padding-top: 16px;
+  }
+
+  &__bottom {}
 
   &__descr {
     @include indent-reset;
