--- a/src/style/pages/apartment-rent/_products.scss
+++ b/src/style/pages/apartment-rent/_products.scss
@@ -18,7 +18,6 @@
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
       column-gap: 28px;
       row-gap: 54px;
-
       margin-bottom: 48px;
     }
 
@@ -31,9 +30,20 @@
       max-width: 300px;
       width: 100%;
       margin-right: 24px;
+      flex-shrink: 0;
 
       &:last-child {
         margin-right: 0;
+      }
+
+      &:nth-child(n + 7) {
+        @include media-min ($lg) {
+          display: none;
+        }
+      }
+
+      &.is-visible {
+        display: block;
       }
 
       @include media-min ($lg) {
@@ -44,8 +54,8 @@
 
   }
 
-  & .btn--primary {
-    display: flex;
+  & #show-more {
+    display: none;
     margin: 0 auto;
     margin-bottom: 48px;
   }
